k8s/ingress/Ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: foo.bar.com
      http:
        paths:
          - path: /foo
            backend:
              serviceName: my-service
              servicePort: 80
          - path: /bar
            backend:
              serviceName: my-other-service
              servicePort: 80
